Fixed header numbers.

--- a/docs/client_requirements/client_requirements.tex
+++ b/docs/client_requirements/client_requirements.tex
@@ -3,6 +3,9 @@
 \usepackage{geometry}
 \usepackage{pgfgantt}
 \geometry{textheight=9.5in, textwidth=7in}
+\renewcommand{\thesection}{\arabic{section}}
+\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
+\renewcommand{\thesubsubsection}{\thesubsection.\arabic{subsubsection}}
 
 \author{Connor Yates\\
 \texttt{yatesco@oregonstate.edu\\}
