--- a/docs/client_requirements/client_requirements.tex
+++ b/docs/client_requirements/client_requirements.tex
@@ -2,10 +2,22 @@
 \pagestyle{empty}
 \usepackage{geometry}
 \usepackage{pgfgantt}
+
+\newcommand{\subparagraph}{}
+\usepackage{titlesec}
 \geometry{textheight=9.5in, textwidth=7in}
+
+
+\titleformat{\section}[block]{\bfseries\Large}{\thesection}{0.4em}{}
+\titleformat{\subsection}[block]{\bfseries\large}{\thesubsection}{0.4em}{}
+\titleformat{\subsubsection}[block]{\bfseries\normalsize}{\thesubsubsection}{0.4em}{}
+\setlength{\parindent}{0pt}
 \renewcommand{\thesection}{\arabic{section}}
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 \renewcommand{\thesubsubsection}{\thesubsection.\arabic{subsubsection}}
+
+\usepackage{etoolbox}
+
 
 \author{Connor Yates\\
 \texttt{yatesco@oregonstate.edu\\}
